[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Font_Designs/Menu_font_styles.tres" type="DynamicFont" id=1]
[ext_resource path="res://Popup.gd" type="Script" id=2]
[ext_resource path="res://Script/Pause_Resume.gd" type="Script" id=3]
[ext_resource path="res://Fonts/GameBattlesRegular-RjXo.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Pause Button" type="Button" parent="."]
margin_left = -17.2645
margin_top = 88.7806
margin_right = 200.736
margin_bottom = 144.781
custom_fonts/font = SubResource( 1 )
text = "Pause"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Resume Button" type="Button" parent="Popup"]
anchor_top = -0.0412109
anchor_right = 4.2
anchor_bottom = 0.233789
margin_left = 696.0
margin_top = 337.648
margin_right = 963.0
margin_bottom = 410.648
custom_fonts/font = ExtResource( 1 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart Game Button" type="Button" parent="Popup"]
margin_left = 678.716
margin_top = 440.483
margin_right = 1199.72
margin_bottom = 524.483
custom_fonts/font = ExtResource( 1 )
text = "Restart "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu Button" type="Button" parent="Popup"]
margin_left = 649.606
margin_top = 535.89
margin_right = 1220.61
margin_bottom = 619.89
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause Button" to="Popup" method="_on_Pause_Button_pressed"]
[connection signal="pressed" from="Popup/Resume Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="Popup/Resume Button" to="Popup" method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="Popup/Restart Game Button" to="." method="_on_Restart_Game_Button_pressed"]
[connection signal="pressed" from="Popup/Restart Game Button" to="Popup" method="_on_Restart_Game_Button_pressed"]
[connection signal="pressed" from="Popup/Main Menu Button" to="." method="_on_Main_Menu_Button_pressed"]
[connection signal="pressed" from="Popup/Main Menu Button" to="Popup" method="_on_Main_Menu_Button_pressed"]
